libs/src/bindings.rs

unsafe extern "C" {
    pub fn ctime(__timer: *const time_t) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn asctime_r(
        __tp: *const tm,
        __buf: *mut ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn ctime_r(
        __timer: *const time_t,
        __buf: *mut ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub static mut __tzname: [*mut ::std::os::raw::c_char; 2usize];
}
unsafe extern "C" {
    pub static mut __daylight: ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub static mut __timezone: ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub static mut tzname: [*mut ::std::os::raw::c_char; 2usize];
}
unsafe extern "C" {
    pub fn tzset();
}
unsafe extern "C" {
    pub static mut daylight: ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub static mut timezone: ::std::os::raw::c_long;
}
unsafe extern "C" {
    pub fn timegm(__tp: *mut tm) -> time_t;
}
unsafe extern "C" {
    pub fn timelocal(__tp: *mut tm) -> time_t;
}
unsafe extern "C" {
    pub fn dysize(__year: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn nanosleep(
        __requested_time: *const timespec,
        __remaining: *mut timespec,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn clock_getres(__clock_id: clockid_t, __res: *mut timespec) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn clock_gettime(__clock_id: clockid_t, __tp: *mut timespec) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn clock_settime(__clock_id: clockid_t, __tp: *const timespec) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn clock_nanosleep(
        __clock_id: clockid_t,
        __flags: ::std::os::raw::c_int,
        __req: *const timespec,
        __rem: *mut timespec,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn clock_getcpuclockid(__pid: pid_t, __clock_id: *mut clockid_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn timer_create(
        __clock_id: clockid_t,
        __evp: *mut sigevent,
        __timerid: *mut timer_t,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn timer_delete(__timerid: timer_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn timer_settime(
        __timerid: timer_t,
        __flags: ::std::os::raw::c_int,
        __value: *const itimerspec,
        __ovalue: *mut itimerspec,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn timer_gettime(__timerid: timer_t, __value: *mut itimerspec) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn timer_getoverrun(__timerid: timer_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn timespec_get(
        __ts: *mut timespec,
        __base: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when a user successfully login to the server (/login).\n When you log in (/login) you should also receive from the server this event.\n @param user_uuid The id of the user who logged in\n @param user_name The name of the user who logged in\n\n Commands:\n /login \"user_name\""]
    pub fn client_event_logged_in(
        user_uuid: *const ::std::os::raw::c_char,
        user_name: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when a user logged out (/logout or lost connexion).\n When you log out (/logout) you should also receive the event before quitting.\n @param user_uuid The id of the user who logged out\n @param user_name The name of the user who logged out\n\n Commands:\n /logout"]
    pub fn client_event_logged_out(
        user_uuid: *const ::std::os::raw::c_char,
        user_name: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when the current logged user receives a private message\n @param user_uuid The id of the user that sent the private message\n @param message_body The body of the private message\n\n Commands:\n /send \"user_uuid\" \"message_body\""]
    pub fn client_event_private_message_received(
        user_uuid: *const ::std::os::raw::c_char,
        message_body: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when a new reply is posted in a thread\n @param team_uuid The id of the team this reply is in\n @param thread_uuid The id of the thread this reply is in\n @param user_uuid The id of the user that created the reply\n @param reply_body The reply body\n\n Commands:\n /create \"reply_body\""]
    pub fn client_event_thread_reply_received(
        team_uuid: *const ::std::os::raw::c_char,
        thread_uuid: *const ::std::os::raw::c_char,
        user_uuid: *const ::std::os::raw::c_char,
        reply_body: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when a new team is created\n Every logged user should receive this event (the creator of the team too)\n @param team_uuid The id of the created team\n @param team_name The name of the created team\n @param team_description The description of the created team\n\n Commands:\n /create \"team_name\" \"team_description\""]
    pub fn client_event_team_created(
        team_uuid: *const ::std::os::raw::c_char,
        team_name: *const ::std::os::raw::c_char,
        team_description: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when a channel is created inside of a team\n @param channel_uuid The id of the created channel\n @param channel_name The name of the created channel\n @param channel_description The description of the created channel\n\n Commands:\n /create \"channel_name\" \"channel_description\""]
    pub fn client_event_channel_created(
        channel_uuid: *const ::std::os::raw::c_char,
        channel_name: *const ::std::os::raw::c_char,
        channel_description: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when a thread is created inside of a channel\n @param thread_uuid The id of the created thread\n @param user_uuid The id of the user who created the thread\n @param thread_timestamp The unix timestamp of the thread creation\n @param thread_title The title of the created thread\n @param thread_body The body of the created thread\n\n Commands:\n /create \"thread_title\" \"thread_body\""]
    pub fn client_event_thread_created(
        thread_uuid: *const ::std::os::raw::c_char,
        user_uuid: *const ::std::os::raw::c_char,
        thread_timestamp: time_t,
        thread_title: *const ::std::os::raw::c_char,
        thread_body: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when you requested a list of users from the server\n ex: asking the subscribed users to a team / the list of users in a domain\n This function should be called once per user in the list\n This function should be called even if the list only has one entry\n @param user_uuid The id of a user\n @param user_name The name of a user\n @param user_status The status of a user (0: not connected; 1: connected)\n user_status is NOT the number of simultaneous connexion of a user\n\n Commands:\n /users\n /subscribed \"team_uuid\""]
    pub fn client_print_users(
        user_uuid: *const ::std::os::raw::c_char,
        user_name: *const ::std::os::raw::c_char,
        user_status: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when you requested a list of teams from the server\n ex: asking the teams you are subscribed to or the available teams in a domain\n This function should be called once per team in the list\n This function should be called even if the list only has one entry\n @param team_uuid The id of a team\n @param team_name The name of a team\n @param team_description The description of a team\n\n Commands:\n /list\n /subscribed"]
    pub fn client_print_teams(
        team_uuid: *const ::std::os::raw::c_char,
        team_name: *const ::std::os::raw::c_char,
        team_description: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when you requested a list of channels from the server\n ex: asking the channels in a team\n This function should be called one per channel in the list\n This function should be called even if the list only has one entry\n @param channel_uuid The id of a channel\n @param channel_name The name of a channel\n @param channel_description The description of a channel\n\n Commands:\n /list"]
    pub fn client_team_print_channels(
        channel_uuid: *const ::std::os::raw::c_char,
        channel_name: *const ::std::os::raw::c_char,
        channel_description: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when you requested a list of threads from the server\n ex: asking the threads in a channel\n This function should be called one per thread in the list\n This function should be called even if the list only has one entry\n @param thread_uuid The id of a thread\n @param user_uuid The id of the user who created a thread\n @param thread_timestamp The unix timestamp of a thread creation\n @param thread_title The title of a thread\n @param thread_body The body of a thread\n\n Commands:\n /list"]
    pub fn client_channel_print_threads(
        thread_uuid: *const ::std::os::raw::c_char,
        user_uuid: *const ::std::os::raw::c_char,
        thread_timestamp: time_t,
        thread_title: *const ::std::os::raw::c_char,
        thread_body: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when you requested a list of replies from the server\n ex: asking the replies in a thread\n This function should be called one per reply in the list\n This function should be called even if the list only has one entry\n @param thread_uuid The id of the thread a reply belongs to\n @param user_uuid The id of the user who created a reply\n @param reply_timestamp The unix timestamp of a reply creation\n @param reply_body The body of a reply\n\n Commands:\n /list"]
    pub fn client_thread_print_replies(
        thread_uuid: *const ::std::os::raw::c_char,
        user_uuid: *const ::std::os::raw::c_char,
        reply_timestamp: time_t,
        reply_body: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when you requested a list of private messages\n ex: asking the private messages with a user\n This function should be called one per private  message in the list\n This function should be called even if the list only has one entry\n @param sender_uuid The id of the user who sent a private message\n @param message_timestamp The unix timestamp of a private message creation\n @param message_body The content of a private message\n\n Commands:\n /messages \"user_uuid\""]
    pub fn client_private_message_print_messages(
        sender_uuid: *const ::std::os::raw::c_char,
        message_timestamp: time_t,
        message_body: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
